fixed overlapping menu issue

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -183,6 +183,16 @@ nav li a:hover{
   height: 40px;
 }
 
+#about,
+#directory,
+#issues,
+#partnership,
+#studies,
+#support{
+  margin-top: 40px;
+}
+
+
 #navigation.affix {
   position: fixed;
   top: 0;
